[project]
name = "pg-podcast-toolkit"
version = "0.0.1"
authors = [
  { name="Jason Mazza", email="jason@reallybadapps.com" },
]
description = "Tools for managing podcasting 2.0 feeds"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Really-Bad-Apps/pg-podcast-toolkit"
Issues = "https://github.com/Really-Bad-Apps/pg-podcast-toolkit/issues"